--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -1,8 +1,16 @@
 ﻿<Window x:Class="Libropouch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:libropouch="clr-namespace:Libropouch"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         Title="MainWindow" Height="500" Width="800" MinWidth="500" MinHeight="350">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/Global.xaml" />
+                <ResourceDictionary Source="Style/Info.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>    
+    
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -17,18 +25,9 @@
             <Button  Content="Butt" Margin="5,0,0,0"/>
             <Button  Content="About" Margin="5,0,0,0" HorizontalAlignment="Right"/>
         </StackPanel>
-        <Border Panel.ZIndex="100" Name="InfoBoxBorder"  Grid.Row="1" CornerRadius="8" VerticalAlignment="Top" Visibility="Hidden">
-            <Border.Effect>
-                <DropShadowEffect Color="#FFD2DAB8"/>
-            </Border.Effect>
-            <Border.Background>
-                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                    <GradientStop Color="#FF7FAE47"/>
-                    <GradientStop Color="#FFCADC94" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.Background>
-            
-            <TextBlock  Name="InfoBox"  Loaded="InfoBox_OnLoaded" TextWrapping="Wrap"  VerticalAlignment="Top" Padding="5" TextAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+
+        <Border Panel.ZIndex="100" Grid.Row="1" Grid.Column="0" CornerRadius="8"  Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">   
+            <TextBlock  Name="InfoBox"  TextWrapping="Wrap"  VerticalAlignment="Top" Padding="5" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" />
         </Border>
 
         <DataGrid Grid.Row="1"  HorizontalAlignment="Left" AutoGenerateColumns="False" Loaded="BookGrid_OnLoaded"  VerticalAlignment="Top" Height="auto"  AlternatingRowBackground="Coral">
