--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -26,7 +26,7 @@
             <Button  Content="About" Margin="5,0,0,0" HorizontalAlignment="Right"/>
         </StackPanel>
 
-        <Border Panel.ZIndex="100" Grid.Row="1" Grid.Column="0" CornerRadius="8"  Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">   
+        <Border Panel.ZIndex="100" Grid.Row="1" Name="InfoBoxBorder" Grid.Column="0" CornerRadius="8"  Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">   
             <TextBlock  Name="InfoBox"  TextWrapping="Wrap"  VerticalAlignment="Top" Padding="5" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" />
         </Border>
 
