--- a/Libropouch/Style/Info.xaml
+++ b/Libropouch/Style/Info.xaml
@@ -3,13 +3,17 @@
     
     <Storyboard x:Key="InfoDissolve">
         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)">
-            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static Visibility.Visible}"/>
-            <DiscreteObjectKeyFrame KeyTime="0:0:5" Value="{x:Static Visibility.Hidden}"/>
+            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static Visibility.Visible}"/>            
         </ObjectAnimationUsingKeyFrames>
-        <DoubleAnimation              
+
+        <ObjectAnimationUsingKeyFrames x:Name="OutVisibility" Storyboard.TargetProperty="(UIElement.Visibility)">            
+            <DiscreteObjectKeyFrame KeyTime="0:0:15" Value="{x:Static Visibility.Hidden}"/>
+        </ObjectAnimationUsingKeyFrames>
+        <DoubleAnimation                
               Storyboard.TargetProperty="Opacity"
               BeginTime="0:0:0" From="0.0" To="1.0" Duration="0:0:0.3"/>
         <DoubleAnimation              
+              x:Name="OutOpacity"
               Storyboard.TargetProperty="Opacity"            
                BeginTime="0:0:3" From="1.0" To="0.0" Duration="0:0:2"/>
     </Storyboard>
