--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -1,96 +1,96 @@
 ﻿<Window x:Class="Libropouch.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Settings" Height="300" Width="300">
+        Title="Settings" Height="300" Width="300" Background="#2d2d30">
     <Window.Resources>
-        
-            <Style TargetType="Button">
-            
-            <Setter Property="Background" Value="#56565c" />
-            <Setter Property="Foreground" Value="#801111" x:Name="fuck"/>            
+
+        <Style TargetType="Button">
             <Setter Property="FontSize" Value="14" />
-            <Setter Property="Width" Value="150" />
-            <Setter Property="Height" Value="30" />           
+            <Setter Property="FontWeight" Value="DemiBold" />
             <Setter Property="Template">
-                
+
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border x:Name="RootElement" CornerRadius="8">
+                        <Border x:Name="RootElement" CornerRadius="4">
                             <Border.Background>
-                                <SolidColorBrush x:Name="BorderBrush" Color="#8D0000" />
+                                <SolidColorBrush x:Name="BorderBrush" Color="#6C0000" />
                             </Border.Background>
 
-                            
-
                             <Border.Effect>
-                                <DropShadowEffect Color="#AE4E4E" />
+                                <DropShadowEffect x:Name="BorderShadow" Opacity="1" BlurRadius="10" Color="#383838"   ShadowDepth="0"/>
                             </Border.Effect>
-                            
+
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup x:Name="CommonStates">
                                     <VisualState x:Name="Normal" />
-                                    
+
                                     <VisualState x:Name="MouseOver">
                                         <Storyboard>
                                             <ColorAnimation Storyboard.TargetName="BorderBrush"
-                                                            Storyboard.TargetProperty="Color" To="Orange" Duration="0:0:0.3"/>
+                                                        Storyboard.TargetProperty="Color" To="OrangeRed" Duration="0:0:0.5"/>                                            
 
                                             <ColorAnimation 
-            Storyboard.TargetName="TextColor"
-            Storyboard.TargetProperty="(TextBlock.Foreground).Color"
-             To="Orange" Duration="0:0:0.3"
-            />
+                                            Storyboard.TargetName="BorderShadow"
+                                            Storyboard.TargetProperty="Color"
+                                                To="OrangeRed" Duration="0:0:0.5"
+                                            />
 
-                                            <!--<ObjectAnimationUsingKeyFrames Duration="0:0:5"  Storyboard.TargetProperty="(Button.Foreground).Color">
-                                                <ObjectAnimationUsingKeyFrames.KeyFrames >
-                                                    <DiscreteObjectKeyFrame  KeyTime="0:0:0" >
-                                                        <DiscreteObjectKeyFrame.Value >
-                                                            <SolidColorBrush  Color="#FF8D00" />
-                                                        </DiscreteObjectKeyFrame.Value>
-                                                    </DiscreteObjectKeyFrame>
-                                                </ObjectAnimationUsingKeyFrames.KeyFrames>
-                                            </ObjectAnimationUsingKeyFrames>-->
-                                        </Storyboard>
-                                    </VisualState>
+                                            <ColorAnimation 
+                                            Storyboard.TargetName="TextColor"
+                                            Storyboard.TargetProperty="(TextBlock.Foreground).Color"
+                                                To="#C73601" Duration="0:0:0.5"
+                                            />
 
-                                    <VisualState x:Name="MouseOut">
-                                        <Storyboard>
-                                            <ColorAnimation Storyboard.TargetName="BorderBrush"
-                                                            Storyboard.TargetProperty="Color" To="#8D0000" Duration="0:0:0.3"/>
-
+                                            <DoubleAnimation Storyboard.TargetName="BorderShadow" Storyboard.TargetProperty="BlurRadius"  To="20"/>
                                         </Storyboard>
                                     </VisualState>
 
                                     <VisualState x:Name="Pressed">
                                         <Storyboard>
+                                            <ColorAnimation 
+                                            Storyboard.TargetName="BackgroundGradientColor2"
+                                            Storyboard.TargetProperty="Color"
+                                                To="#6B6B6B"  Duration="0"
+                                            />
+
                                             <ColorAnimation Storyboard.TargetName="BorderBrush"
-                                                            Storyboard.TargetProperty="Color" To="Green" />
+                                                        Storyboard.TargetProperty="Color" To="#380000" Duration="0"/>
+
+                                            <DoubleAnimation Storyboard.TargetName="TextColor" Storyboard.TargetProperty="(TextBlock.FontSize)"  To="12" Duration="0"/>
+
                                         </Storyboard>
                                     </VisualState>
-                                    
-                                  <VisualState x:Name="Disabled">
+
+                                    <VisualState x:Name="Disabled">
                                         <Storyboard>
                                             <DoubleAnimation Storyboard.TargetName="RootElement"
-                                                             Storyboard.TargetProperty="Opacity"
-                                                             To="0.3" Duration="0" />                     
+                                                            Storyboard.TargetProperty="Opacity"
+                                                            To="0.3" Duration="0" />
                                         </Storyboard>
                                     </VisualState>
                                 </VisualStateGroup>
                                 
                                 <VisualStateGroup x:Name="FocusStates">
-                                        <VisualState x:Name="Focused" />
-                                        <VisualState x:Name="Unfocused" />
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
+                                    <VisualState x:Name="Focused" />
+                                    <VisualState x:Name="Unfocused" />
+                                </VisualStateGroup>
+
+                            </VisualStateManager.VisualStateGroups>
 
                             <Grid  Margin="2">
-                                <Border x:Name="Background" Background="#888888" CornerRadius="7" />
+                                <Border x:Name="Background" CornerRadius="4" >
+                                    <Border.Background>
+                                        <RadialGradientBrush>
+                                            <GradientStop Color="#B3B3B3" Offset="0.49"/>
+                                            <GradientStop Color="#B3B3B3" x:Name="BackgroundGradientColor2" Offset="1"/>
+                                        </RadialGradientBrush>
+                                    </Border.Background>
+                                </Border>
                                 <ContentPresenter    
-                                    x:Name="TextColor"        
-                                    TextBlock.Foreground ="Red"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Margin="0"/>
+                                x:Name="TextColor"        
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Margin="10,0,10,0"/>
 
                             </Grid>
 
@@ -99,10 +99,10 @@
                 </Setter.Value>
             </Setter>
         </Style>
-     
+
     </Window.Resources>
     <Grid>
-        <Button>Sup onéčan</Button>
-        
+        <Button Width="100" Height="25">Sup onéčan</Button>
+
     </Grid>
 </Window>
