--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/Global.xaml" />
-                <ResourceDictionary Source="Style/Controls.xaml" />                               
+                <ResourceDictionary Source="Style/Controls.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!--Style for the form-->
             <Style TargetType="RowDefinition">
@@ -15,6 +15,11 @@
             <Style TargetType="TextBlock">
                 <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="Foreground" Value="WhiteSmoke"/>
+                <Setter Property="Margin" Value="0,0,0,5"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+
                 <Setter Property="Margin" Value="0,0,0,5"/>
             </Style>
             <Style TargetType="Label">
@@ -39,6 +44,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="90"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -70,8 +76,39 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="_AutoSync:" Target="{Binding ElementName=UsbAutoSync}"/>
-        <CheckBox Grid.Row="2" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="Automatically start sync, when compatible reader is connected to the computer"/>
+        <Border Grid.Row="2" Grid.Column="1" Name="UnknownDeviceForm" Visibility="Visible" Background="#58585f" CornerRadius="6" Width="260" Padding="10" HorizontalAlignment="Left">
+            <Border.Effect>
+                <DropShadowEffect Opacity="1" BlurRadius="10" Color="#383838"   ShadowDepth="0"/>
+            </Border.Effect>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90" />
+                    <ColumnDefinition Width="150" />
+                </Grid.ColumnDefinitions>
+
+                <Button Content="What is this?" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="1" />
+
+                <Label Grid.Row="1" Grid.Column="0" Content="_Model:" Target="{Binding ElementName=DeviceModel}"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Model name of the reader device, usually identical to the marketing name of the reader. (For example: kindle's model name is kindle) "/>
+
+                <Label Grid.Row="2" Grid.Column="0" Content="_PnP ID:" Target="{Binding ElementName=DevicePnpId}"/>
+                <TextBox Grid.Row="2" Grid.Column="1" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Device's Plug and play ID. Usually identical to the model name. But it can differ. "/>
+
+                <Label Grid.Row="3" Grid.Column="0" Content="_Book directory:" Target="{Binding ElementName=DeviceRootDir}" />
+                <TextBox Grid.Row="3" Grid.Column="1" Name="DeviceRootDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Directory on the device, where all the books are stored. This is the directory which Libropouch will use, while working with the device."/>                
+            </Grid>
+        </Border>
+
+
+        <Label Grid.Row="3" Grid.Column="0" Content="_AutoSync:" Target="{Binding ElementName=UsbAutoSync}"/>
+        <CheckBox Grid.Row="3" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="Automatically start sync, when compatible reader is connected to the computer"/>
 
     </Grid>
 </Window>
