--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -1,16 +1,16 @@
 ﻿<Window x:Class="Libropouch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="700" Width="1000" MinWidth="500" MinHeight="350" Background="#2d2d30">
+        Title="Libropouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" Background="#2d2d30" x:Name="Window">
     <Window.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>                
+            <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/Global.xaml" />
                 <ResourceDictionary Source="Style/Controls.xaml" />
-                <ResourceDictionary Source="Style/Info.xaml" />                
+                <ResourceDictionary Source="Style/Info.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-        
+
     </Window.Resources>
 
     <Grid Margin="5">
@@ -23,8 +23,14 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Margin="0,5,5,5">
-            <Button Click="Sync_OnClick" Content="Sync" ToolTip="Synchronize files on the connected ebook reader with local Libropouch library"/>
-            <Button  Content="Add books" Click="Add_OnClick" Margin="5,0,0,0" ToolTip="Add new books to the library"/>
+            <Button Click="Sync_OnClick" Style="{StaticResource MenuIconButton}" ToolTip="Synchronize files on the connected ebook reader with local Libropouch library">
+                <Image Source="Img/arrows.png"/>
+            </Button>
+
+            <Button Click="Add_OnClick" Style="{StaticResource MenuIconButton}" Margin="5,0,0,0" ToolTip="Add new books into the library">
+                <Image Source="Img/plus.png"/>
+            </Button>
+            
             <Button  Content="Settings" Margin="5,0,0,0" Click="Settings_OnClick" />
             <Button  Content="About" Click="About_OnClick" Margin="5,0,0,0" />
         </StackPanel>
@@ -33,27 +39,27 @@
             <TextBlock  Name="InfoBox"  TextWrapping="Wrap"  VerticalAlignment="Top" Padding="5" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" />
         </Border>
 
-        <DataGrid Grid.Row="1"  IsReadOnly="True"  HorizontalAlignment="Left" AutoGenerateColumns="False" Loaded="BookGrid_OnLoaded" HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" VerticalAlignment="Top" Height="auto" RowBackground="#5d5d5d" AlternatingRowBackground="#454545">
+        <DataGrid Background="#569cd6" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False" Loaded="BookGrid_OnLoaded" HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" VerticalAlignment="Top" RowBackground="#5d5d5d" AlternatingRowBackground="#454545">
             <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell" >                    
+                <Style TargetType="DataGridCell" >
                     <Style.Triggers>
                         <Trigger Property="IsSelected" Value="True">
                             <Setter Property="Background" Value="#D3E26610"/>
                             <Setter Property="BorderBrush" Value="#844200"/>
-                        </Trigger>                        
+                        </Trigger>
                     </Style.Triggers>
                     <Setter Property="Foreground" Value="#F2F2F2"/>
                     <Setter Property="FontWeight" Value="SemiBold"/>
-                </Style>      
-                
+                </Style>
+
             </DataGrid.CellStyle>
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="#569cd6"/>
                     <Setter Property="Padding" Value="5"/>
-                    <Setter Property="FontWeight" Value="Heavy"/>                    
+                    <Setter Property="FontWeight" Value="Heavy"/>
                 </Style>
-             </DataGrid.ColumnHeaderStyle>
+            </DataGrid.ColumnHeaderStyle>
             <DataGrid.RowHeaderStyle>
                 <Style TargetType="{x:Type DataGridRowHeader}">
                     <Setter Property="Background" Value="#569cd6"/>
@@ -65,14 +71,14 @@
                 <DataGridTextColumn Header="Name" Binding="{Binding Title}"  Width="*">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="Padding" Value="5" />                            
+                            <Setter Property="Padding" Value="5" />
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
                 <DataGridTemplateColumn Header=" ★">
-                    <DataGridTemplateColumn.CellTemplate>                        
-                        <DataTemplate>                            
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
                             <Button Click="FavoriteToggle_OnClick" ToolTip="Allows marking this book as favorite">
                                 <Button.Template>
                                     <ControlTemplate>
@@ -103,7 +109,7 @@
 
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
-                    <Border Padding="5" Margin="6" CornerRadius="8">
+                    <Border Padding="5" Margin="6" CornerRadius="8" MaxWidth="{Binding ElementName=Window, Path=ActualWidth }">
                         <Border.Effect>
                             <DropShadowEffect Color="#797777"/>
                         </Border.Effect>
@@ -117,7 +123,7 @@
                         <DockPanel>
                             <Image Source="Img/book.png" MaxHeight="128" MaxWidth="128" DockPanel.Dock="Left" FlowDirection="LeftToRight" Margin="0,0,10,0"/>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock FontSize="24" FontWeight="Regular" Foreground="WhiteSmoke" Text="{Binding Title}" VerticalAlignment="Center" >
+                                <TextBlock FontSize="21" FontWeight="Regular" TextWrapping="Wrap" Foreground="WhiteSmoke" Text="{Binding Title}" VerticalAlignment="Center" >
                                     <TextBlock.Effect>
                                         <DropShadowEffect Color="Black" ShadowDepth="5" BlurRadius="5"/>
                                     </TextBlock.Effect>
@@ -140,7 +146,7 @@
                                 </StackPanel>
                                 <TextBlock Text="{Binding Description}"/>
                             </StackPanel>
-                            <Button Content="Edit" Click="EditBook_OnClick" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                            <Button Content="Edit" Click="EditBook_OnClick" DataContext="{Binding InfoFile}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
                         </DockPanel>
                     </Border>
                 </DataTemplate>
