--- a/Libropouch/Style/Controls.xaml
+++ b/Libropouch/Style/Controls.xaml
@@ -15,7 +15,8 @@
                         </Border.Background>
 
                         <Border.Effect>
-                            <DropShadowEffect x:Name="BorderShadow" Opacity="1" BlurRadius="10" Color="#383838"   ShadowDepth="0"/>
+                            <DropShadowEffect x:Name="BorderShadow" Opacity="1" BlurRadius="10" Color="#383838"
+                                              ShadowDepth="0" />
                         </Border.Effect>
 
                         <VisualStateManager.VisualStateGroups>
@@ -25,42 +26,41 @@
                                 <VisualState x:Name="MouseOver">
                                     <Storyboard>
                                         <ColorAnimation Storyboard.TargetName="BorderBrush"
-                                                        Storyboard.TargetProperty="Color" To="OrangeRed" Duration="0:0:0.5"/>
+                                                        Storyboard.TargetProperty="Color" To="OrangeRed"
+                                                        Duration="0:0:0.5" />
 
-                                        <ColorAnimation 
+                                        <ColorAnimation
                                             Storyboard.TargetName="BorderShadow"
                                             Storyboard.TargetProperty="Color"
-                                                To="OrangeRed" Duration="0:0:0.5"
-                                            />
+                                            To="OrangeRed" Duration="0:0:0.5" />
 
-                                        <ColorAnimation 
+                                        <ColorAnimation
                                             Storyboard.TargetName="TextColor"
                                             Storyboard.TargetProperty="(TextBlock.Foreground).Color"
-                                                To="#C73601" Duration="0:0:0.5"
-                                            />
+                                            To="#C73601" Duration="0:0:0.5" />
 
-                                        <DoubleAnimation Storyboard.TargetName="BorderShadow" Storyboard.TargetProperty="BlurRadius"  To="20"/>
+                                        <DoubleAnimation Storyboard.TargetName="BorderShadow"
+                                                         Storyboard.TargetProperty="BlurRadius" To="20" />
                                     </Storyboard>
                                 </VisualState>
 
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
-                                        <ColorAnimation 
+                                        <ColorAnimation
                                             Storyboard.TargetName="BackgroundGradientColor2"
                                             Storyboard.TargetProperty="Color"
-                                                To="#6B6B6B"  Duration="0"
-                                            />
+                                            To="#6B6B6B" Duration="0" />
 
                                         <ColorAnimation Storyboard.TargetName="BorderBrush"
-                                                        Storyboard.TargetProperty="Color" To="#380000" Duration="0"/>
+                                                        Storyboard.TargetProperty="Color" To="#380000" Duration="0" />
                                     </Storyboard>
                                 </VisualState>
 
                                 <VisualState x:Name="Disabled">
                                     <Storyboard>
                                         <DoubleAnimation Storyboard.TargetName="RootElement"
-                                                            Storyboard.TargetProperty="Opacity"
-                                                            To="0.3" Duration="0" />
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="0.3" Duration="0" />
                                     </Storyboard>
                                 </VisualState>
                             </VisualStateGroup>
@@ -72,20 +72,20 @@
 
                         </VisualStateManager.VisualStateGroups>
 
-                        <Grid  Margin="2">
-                            <Border x:Name="Background" CornerRadius="4" >
+                        <Grid Margin="2">
+                            <Border x:Name="Background" CornerRadius="4">
                                 <Border.Background>
                                     <RadialGradientBrush>
-                                        <GradientStop Color="#B3B3B3" Offset="0.49"/>
-                                        <GradientStop Color="#B3B3B3" x:Name="BackgroundGradientColor2" Offset="1"/>
+                                        <GradientStop Color="#B3B3B3" Offset="0.49" />
+                                        <GradientStop Color="#B3B3B3" x:Name="BackgroundGradientColor2" Offset="1" />
                                     </RadialGradientBrush>
                                 </Border.Background>
                             </Border>
-                            <ContentPresenter    
-                                x:Name="TextColor"        
+                            <ContentPresenter
+                                x:Name="TextColor"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
-                                Margin="10,0,10,0"/>
+                                Margin="10,0,10,0" />
 
                         </Grid>
 
@@ -95,5 +95,91 @@
         </Setter>
     </Style>
 
+    <!--Style for all menu butons-->
+    <Style x:Key="MenuIconButton" TargetType="Button">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontWeight" Value="Normal" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="32" />
+        <Setter Property="Template">
+
+
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="RootElement" CornerRadius="4" BorderThickness="0">
+                        <Border.RenderTransform>
+                            <ScaleTransform ScaleY="1" ScaleX="1" CenterX="16" CenterY="16" x:Name="BorderScale" />
+                        </Border.RenderTransform>
+
+                        <Border.BorderBrush>
+                            <SolidColorBrush x:Name="BorderColor" Color="Transparent" />
+                        </Border.BorderBrush>
+                        <Border.Effect>
+                            <DropShadowEffect x:Name="BorderShadow" BlurRadius="15" Color="Gray" ShadowDepth="0" />
+                        </Border.Effect>
+
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimation
+                                            Storyboard.TargetName="BorderColor"
+                                            Storyboard.TargetProperty="Color"
+                                            To="OrangeRed" Duration="0:0:0.5" />
+
+                                        <ColorAnimation
+                                            Storyboard.TargetName="BorderShadow"
+                                            Storyboard.TargetProperty="Color"
+                                            To="OrangeRed" Duration="0:0:0.5" />
+                                    </Storyboard>
+                                </VisualState>
+
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ColorAnimation
+                                            Storyboard.TargetName="BorderShadow"
+                                            Storyboard.TargetProperty="Color"
+                                            To="LimeGreen" Duration="0" />
+
+                                        <DoubleAnimation Storyboard.TargetName="BorderScale"
+                                                         Storyboard.TargetProperty="(ScaleTransform.ScaleX)"
+                                                         Duration="0" To="0.8" />
+                                        <DoubleAnimation Storyboard.TargetName="BorderScale"
+                                                         Storyboard.TargetProperty="(ScaleTransform.ScaleY)"
+                                                         Duration="0" To="0.8" />
+                                    </Storyboard>
+                                </VisualState>
+
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="RootElement"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="0.3" Duration="0" />
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+
+                            <VisualStateGroup x:Name="FocusStates">
+                                <VisualState x:Name="Focused" />
+                                <VisualState x:Name="Unfocused" />
+                            </VisualStateGroup>
+
+                        </VisualStateManager.VisualStateGroups>
+
+                        <Grid Margin="0" Background="Transparent">
+
+                            <ContentPresenter
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Margin="0" />
+
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
