--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Libropouch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Libropouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" Background="#2d2d30" x:Name="Window">
+        Title="Libropouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" x:Name="Window"
+        Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -23,52 +24,65 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Margin="0,5,5,5">
-            <Button Click="Sync_OnClick" Style="{StaticResource MenuIconButton}" ToolTip="Synchronize files on the connected ebook reader with local Libropouch library">
-                <Image Source="Img/arrows.png"/>
+            <Button Click="Sync_OnClick" Style="{StaticResource MenuIconButton}"
+                    ToolTip="Synchronize files on the connected ebook reader with local Libropouch library">
+                <Image Source="Img/arrows.png" />
             </Button>
 
-            <Button Click="Add_OnClick" Style="{StaticResource MenuIconButton}" Margin="5,0,0,0" ToolTip="Add new books into the library">
-                <Image Source="Img/plus.png"/>
+            <Button Click="Add_OnClick" Style="{StaticResource MenuIconButton}" Margin="5,0,0,0"
+                    ToolTip="Add new books into the library">
+                <Image Source="Img/plus.png" />
             </Button>
-            
-            <Button  Content="Settings" Margin="5,0,0,0" Click="Settings_OnClick" />
-            <Button  Content="About" Click="About_OnClick" Margin="5,0,0,0" />
+
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="0"
+                    VerticalAlignment="Top" Margin="5,5,0,5" Opacity="0.3">
+            <Button Margin="5,0,0,0" Click="Settings_OnClick" Style="{StaticResource MenuIconButton}"
+                    ToolTip="Settings">
+                <Image Source="Img/tools1.png" />
+            </Button>
+            <Button Click="About_OnClick" Margin="5,0,0,0" Style="{StaticResource MenuIconButton}" ToolTip="About">
+                <Image Source="Img/silhouette.png" />
+            </Button>
         </StackPanel>
 
-        <Border Panel.ZIndex="100" Grid.Row="1" Name="InfoBoxBorder" Grid.Column="0" CornerRadius="8"  Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">
-            <TextBlock  Name="InfoBox"  TextWrapping="Wrap"  VerticalAlignment="Top" Padding="5" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" />
+        <Border Panel.ZIndex="100" Grid.Row="1" Name="InfoBoxBorder" Grid.Column="0" CornerRadius="8"
+                Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">
+            <TextBlock Name="InfoBox" TextWrapping="Wrap" VerticalAlignment="Top" Padding="5" TextAlignment="Center"
+                       RenderTransformOrigin="0.5,0.5" />
         </Border>
 
-        <DataGrid Background="#569cd6" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False" Loaded="BookGrid_OnLoaded" HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" VerticalAlignment="Top" RowBackground="#5d5d5d" AlternatingRowBackground="#454545">
+        <DataGrid x:Name="BookGrid" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False"
+                  Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" 
+                  HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" RowBackground="#5d5d5d" AlternatingRowBackground="#454545"  Background="#569cd6" >            
             <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell" >
+                <Style TargetType="DataGridCell">
                     <Style.Triggers>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="#D3E26610"/>
-                            <Setter Property="BorderBrush" Value="#844200"/>
+                            <Setter Property="Background" Value="#D3E26610" />
+                            <Setter Property="BorderBrush" Value="#844200" />
                         </Trigger>
                     </Style.Triggers>
-                    <Setter Property="Foreground" Value="#F2F2F2"/>
-                    <Setter Property="FontWeight" Value="SemiBold"/>
-                </Style>
-
+                    <Setter Property="Foreground" Value="#F2F2F2" />
+                    <Setter Property="FontWeight" Value="SemiBold" />
+                </Style>                
             </DataGrid.CellStyle>
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
-                    <Setter Property="Background" Value="#569cd6"/>
-                    <Setter Property="Padding" Value="5"/>
-                    <Setter Property="FontWeight" Value="Heavy"/>
+                    <Setter Property="Background" Value="#569cd6" />
+                    <Setter Property="Padding" Value="5" />
+                    <Setter Property="FontWeight" Value="Heavy" />
                 </Style>
             </DataGrid.ColumnHeaderStyle>
             <DataGrid.RowHeaderStyle>
                 <Style TargetType="{x:Type DataGridRowHeader}">
-                    <Setter Property="Background" Value="#569cd6"/>
-                    <Setter Property="Padding" Value="2"/>
+                    <Setter Property="Background" Value="#569cd6" />
+                    <Setter Property="Padding" Value="2" />
                 </Style>
             </DataGrid.RowHeaderStyle>
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Title}"  Width="*">
+                <DataGridTextColumn Header="Name" Binding="{Binding Title}" Width="*">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Padding" Value="5" />
@@ -82,7 +96,7 @@
                             <Button Click="FavoriteToggle_OnClick" ToolTip="Allows marking this book as favorite">
                                 <Button.Template>
                                     <ControlTemplate>
-                                        <Image Source="Img/star.png" Height="25" Opacity="{Binding FavoriteOpacity}"/>
+                                        <Image Source="Img/star.png" Height="25" Opacity="{Binding FavoriteOpacity}" />
                                     </ControlTemplate>
                                 </Button.Template>
                             </Button>
@@ -93,10 +107,11 @@
                 <DataGridTemplateColumn Header=" ⇪">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="SyncToDeviceToggle_OnClick" ToolTip="Toggles if the book will be synced into the reader">
+                            <Button Click="SyncToDeviceToggle_OnClick"
+                                    ToolTip="Toggles if the book will be synced into the reader">
                                 <Button.Template>
                                     <ControlTemplate>
-                                        <Image Source="Readers/kindle.png" Height="25" Opacity="{Binding SyncOpacity}"/>
+                                        <Image Source="Readers/kindle.png" Height="25" Opacity="{Binding SyncOpacity}" />
                                     </ControlTemplate>
                                 </Button.Template>
                             </Button>
@@ -104,49 +119,57 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTextColumn Header="Category" Binding="{Binding Category}"  Width="auto" />
+                <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="auto" />
             </DataGrid.Columns>
 
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
-                    <Border Padding="5" Margin="6" CornerRadius="8" MaxWidth="{Binding ElementName=Window, Path=ActualWidth }">
+                    <Border Padding="5" Margin="6" CornerRadius="8"
+                            MaxWidth="{Binding ElementName=Window, Path=ActualWidth }">
                         <Border.Effect>
-                            <DropShadowEffect Color="#797777"/>
+                            <DropShadowEffect Color="#797777" />
                         </Border.Effect>
                         <Border.Background>
                             <RadialGradientBrush>
-                                <GradientStop Color="#FF515157" Offset="1"/>
-                                <GradientStop Color="#FF7D7D86"/>
+                                <GradientStop Color="#FF515157" Offset="1" />
+                                <GradientStop Color="#FF7D7D86" />
                             </RadialGradientBrush>
                         </Border.Background>
 
                         <DockPanel>
-                            <Image Source="Img/book.png" MaxHeight="128" MaxWidth="128" DockPanel.Dock="Left" FlowDirection="LeftToRight" Margin="0,0,10,0"/>
+                            <Image Source="Img/book.png" MaxHeight="128" MaxWidth="128" DockPanel.Dock="Left"
+                                   FlowDirection="LeftToRight" Margin="0,0,10,0" />
                             <StackPanel Orientation="Vertical">
-                                <TextBlock FontSize="21" FontWeight="Regular" TextWrapping="Wrap" Foreground="WhiteSmoke" Text="{Binding Title}" VerticalAlignment="Center" >
+                                <TextBlock FontSize="21" FontWeight="Regular" TextWrapping="Wrap"
+                                           Foreground="WhiteSmoke" Text="{Binding Title}" VerticalAlignment="Center">
                                     <TextBlock.Effect>
-                                        <DropShadowEffect Color="Black" ShadowDepth="5" BlurRadius="5"/>
+                                        <DropShadowEffect Color="Black" ShadowDepth="5" BlurRadius="5" />
                                     </TextBlock.Effect>
                                 </TextBlock>
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="Img/silhouette1.png" Height="16" Margin="0,0,5,0" HorizontalAlignment="Left"/>
-                                    <TextBlock FontSize="16" Text="{Binding Author}" Foreground="#92caf4" FontWeight="Medium" Visibility="{Binding AuthorVisibility}" VerticalAlignment="Center">
+                                    <Image Source="Img/silhouette.png" Height="16" Margin="0,0,5,0"
+                                           HorizontalAlignment="Left" />
+                                    <TextBlock FontSize="16" Text="{Binding Author}" Foreground="#92caf4"
+                                               FontWeight="Medium" Visibility="{Binding AuthorVisibility}"
+                                               VerticalAlignment="Center">
                                         <TextBlock.Effect>
-                                            <DropShadowEffect Color="#0a395c" ShadowDepth="3" BlurRadius="3"/>
-                                        </TextBlock.Effect></TextBlock>
+                                            <DropShadowEffect Color="#0a395c" ShadowDepth="3" BlurRadius="3" />
+                                        </TextBlock.Effect>
+                                    </TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Visibility="{Binding SeriesVisibility}">
                                     <TextBlock FontSize="18" Text="📚" FontWeight="Medium" VerticalAlignment="Center" />
-                                    <TextBlock  Text="{Binding Series}" FontWeight="DemiBold" VerticalAlignment="Center" />
+                                    <TextBlock Text="{Binding Series}" FontWeight="DemiBold" VerticalAlignment="Center" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="{Binding CountryFlagPath}" Height="18" Margin="0,0,5,0"/>
+                                    <Image Source="{Binding CountryFlagPath}" Height="18" Margin="0,0,5,0" />
                                     <TextBlock Text="{Binding Publisher}" />
-                                    <TextBlock Text="{Binding Published}" Foreground="#FF292929"/>
+                                    <TextBlock Text="{Binding Published}" Foreground="#FF292929" />
                                 </StackPanel>
-                                <TextBlock Text="{Binding Description}"/>
+                                <TextBlock Text="{Binding Description}" />
                             </StackPanel>
-                            <Button Content="Edit" Click="EditBook_OnClick" DataContext="{Binding InfoFile}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                            <Button Content="Edit" Click="EditBook_OnClick" DataContext="{Binding InfoFile}"
+                                    VerticalAlignment="Top" HorizontalAlignment="Right" />
                         </DockPanel>
                     </Border>
                 </DataTemplate>
